# wc-simulation

./: .gitignore  PRD.md  README.md  pyproject.toml  pyrightconfig.json  report.html
docs/superpowers/plans/: 2026-05-15-spike-1-validation-backtest.md  2026-05-16-spike-2-library-extraction.md  2026-05-16-spike-3-monte-carlo-cli.md  2026-05-22-dc-attack-defence-validation.md
docs/superpowers/specs/: 2026-05-15-spike-1-validation-backtest-design.md  2026-05-16-spike-2-library-extraction-design.md  2026-05-16-spike-3-monte-carlo-cli-design.md
spikes/01-validation/: README.md  dc_attack_defence.py  name_to_iso3.py  requirements.txt  validate.py  validate_dc.py  verify_names.py
spikes/01-validation/data/raw/: elo_history.csv  fifa_ranking.csv  knockout_supplement.csv  matches_history.csv  squads_2026.json  wc2026_draw.json  wc2026_venues.json
spikes/01-validation/results/: brier.json  dc_2026_preview.json  dc_attack_defence.json  sweep.json
spikes/01-validation/scrapers/: elo.py  fifa.py  international_results.py  matches.py  squads.py
spikes/01-validation/tools/: sweep.py
tests/: conftest.py  test_cache.py  test_cli.py  test_data.py  test_dc_attack_defence.py  test_model.py  test_regression.py  test_report.py  test_sim.py  test_squad_data.py  test_tournament.py  test_types.py  test_validation_dc.py
tests/test_ratings/: test_base.py  test_blend.py  test_blend_all.py  test_elo.py  test_fifa.py  test_player.py
wcsim/: __init__.py  __main__.py  cache.py  cli.py  data.py  model.py  report.py  sim.py  squad_data.py  tournament.py  types.py
wcsim/ratings/: base.py  blend.py  blend_all.py  elo.py  fifa.py  player.py
