[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wcsim"
version = "0.4.0"
description = "FIFA World Cup Monte Carlo Simulator"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "typer>=0.9",
    "pyarrow>=14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
data = [
    "pandas>=2.2",
    "matplotlib>=3.8",
    "requests>=2.31",
]

[project.scripts]
wcsim = "wcsim.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["wcsim"]
